force-app/main/default/objects/LeadScoringCriteria__c/LeadScoringCriteria__c.object-meta.xml
<CustomObject>
    <description>Criteria to match with the right CR and BR</description>
    <label>Lead Scoring Criteria</label>
    <nameField>
        <label>Lead Scoring Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Scoring Criterias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>