force-app/main/default/objects/LeadScoringCriteria__c/fields/Channel_Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Channel_Ref_No__c</fullName>
    <label>Channel Ref No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>