force-app/main/default/objects/LeadScoringCriteria__c/fields/ChannelCategory__c.field-meta.xml
<CustomField>
    <fullName>ChannelCategory__c</fullName>
    <description>The category for the channel related to CR</description>
    <label>Channel Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>