force-app/main/default/objects/LeadScoringCriteria__c/fields/ChannelType__c.field-meta.xml
<CustomField>
    <fullName>ChannelType__c</fullName>
    <description>Channel Type of the CR</description>
    <label>Channel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Trade</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Other - Online</fullName>
            </value>
            <value>
                <fullName>Other - Offline</fullName>
            </value>
            <value>
                <fullName>MMC</fullName>
            </value>
            <value>
                <fullName>MKT</fullName>
            </value>
            <value>
                <fullName>Ethical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>