force-app/main/default/objects/LeadScoringCriteria__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <description>Market related to CR and BR</description>
    <label>Market</label>
    <length>18</length>
    <type>Text</type>
</CustomField>