force-app/main/default/objects/LeadScoringCriteria__c/fields/Medium__c.field-meta.xml
<CustomField>
    <fullName>Medium__c</fullName>
    <description>The Medium used related to the CR</description>
    <label>Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>