force-app/main/default/objects/LeadScoringCriteria__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Market__c</columns>
    <columns>KeyBrand__c</columns>
    <columns>ChannelCategory__c</columns>
    <columns>ChannelType__c</columns>
    <columns>Medium__c</columns>
    <columns>Channel_Ref_No__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>